--- a/index.html
+++ b/index.html
@@ -80,6 +80,60 @@
             </div>
           </div>
         </section>
+
+        <section class="benefits">
+          <div class="content">
+            <h2 class="section_title">
+              benef<span class="stroke">its</span>
+              <span class="section_title_square"></span>
+            </h2>
+
+            <ul class="benefits_list">
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-200">/01</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-150">/02</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-150">/03</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-150">/04</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-110">/05</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+              <li class="benefits_item">
+                <span class="benefits_num" data-speed="-200">/06</span>
+                <p class="benefits_p">
+                  Tempor incididunt anim ut duis amet nisi dolor consectetur
+                  occaecat.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
     </div>
 
