--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <section class="benefits">
           <div class="content">
-            <h2 class="section_title">
+            <h2 class="section_title text-center">
               benef<span class="stroke">its</span>
               <span class="section_title_square"></span>
             </h2>
@@ -134,7 +134,107 @@
             </ul>
           </div>
         </section>
+
+        <!-- Work Section -->
+        <section class="work">
+          <div class="content">
+            <h2 class="section_title text-center">
+              portfo<span class="stroke">lio</span>
+              <span class="section_title_square"></span>
+            </h2>
+          </div>
+
+          <div class="work_wrap">
+            <div class="work_item" data-speed="-300">
+              <span class="work_item_num" data-speed="-1000">/001</span>
+              <div class="work_item_img">
+                <img src="img/3.jpg" alt="" />
+              </div>
+            </div>
+            <div class="work_item" data-speed="-600">
+              <span class="work_item_num" data-speed="-500">/002</span>
+              <div class="work_item_img">
+                <img src="img/4.jpg" alt="" />
+              </div>
+            </div>
+
+            <div class="work_item" data-speed="-700">
+              <span class="work_item_num" data-speed="-700">/003</span>
+              <div class="work_item_img">
+                <img src="img/5.jpg" alt="" />
+              </div>
+            </div>
+            <div class="work_item" data-speed="-400">
+              <span class="work_item_num" data-speed="-200">/004</span>
+              <div class="work_item_img">
+                <img src="img/6.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- serv section -->
+        <section class="serv">
+          <div class="content">
+            <h2 class="section_title text-center">
+              servic<span class="stroke">ce</span>
+              <span class="section_title_square"></span>
+            </h2>
+
+            <div class="serv_list">
+              <div class="serv_item">
+                <span class="serv_item_arrow" data-speed="500">
+                  <img src="img/arrow.svg" alt="" />
+                </span>
+                <span class="serv_item_text_wrapper">
+                  <span class="serv_item_text">/Graphic Design</span>
+                </span>
+              </div>
+              <div class="serv_item">
+                <span class="serv_item_arrow" data-speed="400">
+                  <img src="img/arrow.svg" alt="" />
+                </span>
+                <span class="serv_item_text_wrapper">
+                  <span class="serv_item_text">/UX/UI Design</span>
+                </span>
+              </div>
+              <div class="serv_item">
+                <span class="serv_item_arrow" data-speed="800">
+                  <img src="img/arrow.svg" alt="" />
+                </span>
+                <span class="serv_item_text_wrapper">
+                  <span class="serv_item_text">/Web Design</span>
+                </span>
+              </div>
+              <div class="serv_item">
+                <span class="serv_item_arrow" data-speed="600">
+                  <img src="img/arrow.svg" alt="" />
+                </span>
+                <span class="serv_item_text_wrapper">
+                  <span class="serv_item_text">/Brand Design</span>
+                </span>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="footer_wrapper">
+          <span data-speed="-300">a</span>
+          <span data-speed="100">p</span>
+          <span data-speed="300">p</span>
+          <span data-speed="-300">r</span>
+          <span data-speed="350">o</span>
+          <span data-speed="200">v</span>
+          <span data-speed="-310">e</span>
+          <span data-speed="200">c</span>
+          <span data-speed="-340">o</span>
+          <span data-speed="-100">d</span>
+          <span data-speed="300">e</span>
+        </div>
+      </footer>
     </div>
 
     <!-- GSAP Libraries -->
